--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,55 +1,63 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Java",
-            "type": "java",
-            "request": "launch",
-            "stopOnEntry": true,
-            "jdkPath": "${env:JAVA_HOME}/bin",
-            "cwd": "${fileDirname}",
-            "startupClass": "${fileBasenameNoExtension}",
-            "classpath": [
-                ".",
-                "${fileDirname}"
-            ]
-        },
-        {
-            "name": "Java Console App",
-            "type": "java",
-            "request": "launch",
-            "stopOnEntry": true,
-            "jdkPath": "${env:JAVA_HOME}/bin",
-            "cwd": "${fileDirname}",
-            "startupClass": "${fileBasenameNoExtension}",
-            "classpath": [
-                ".",
-                "${fileDirname}"
-            ],
-            "externalConsole": true
-        },
-        {
-            "type": "java",
-            "name": "Current File",
-            "request": "launch",
-            "mainClass": "${file}"
-        },
-        {
-            "type": "java",
-            "name": "Dashboard",
-            "request": "launch",
-            "mainClass": "rupp.Dashboard",
-            "projectName": "RUPP_5e5c80e4"
-        },
-        {
-            "type": "java",
-            "name": "PhoneShopManagementSystem",
-            "request": "launch",
-            "mainClass": "rupp.PhoneShopManagementSystem",
-            "projectName": "RUPP_5e5c80e4"
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "java",
+      "name": "PhoneShopManagementSystem",
+      "request": "launch",
+      "mainClass": "PhoneShopManagementSystem",
+      "projectName": "RUPP_5e5c80e4"
+    },
+    {
+      "type": "java",
+      "name": "Dashboard",
+      "request": "launch",
+      "mainClass": "Dashboard",
+      "projectName": "RUPP_5e5c80e4"
+    },
+    {
+      "name": "Java",
+      "type": "java",
+      "request": "launch",
+      "stopOnEntry": true,
+      "jdkPath": "${env:JAVA_HOME}/bin",
+      "cwd": "${fileDirname}",
+      "startupClass": "${fileBasenameNoExtension}",
+      "classpath": [".", "${fileDirname}"]
+    },
+    {
+      "name": "Java Console App",
+      "type": "java",
+      "request": "launch",
+      "stopOnEntry": true,
+      "jdkPath": "${env:JAVA_HOME}/bin",
+      "cwd": "${fileDirname}",
+      "startupClass": "${fileBasenameNoExtension}",
+      "classpath": [".", "${fileDirname}"],
+      "externalConsole": true
+    },
+    {
+      "type": "java",
+      "name": "Current File",
+      "request": "launch",
+      "mainClass": "${file}"
+    },
+    {
+      "type": "java",
+      "name": "Dashboard",
+      "request": "launch",
+      "mainClass": "rupp.Dashboard",
+      "projectName": "RUPP_5e5c80e4"
+    },
+    {
+      "type": "java",
+      "name": "PhoneShopManagementSystem",
+      "request": "launch",
+      "mainClass": "rupp.PhoneShopManagementSystem",
+      "projectName": "RUPP_5e5c80e4"
+    }
+  ]
 }
