--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,13 +37,15 @@ endorsed.classpath=
 excludes=
 file.reference.jcalendar-0.8.1.jar=D:\\RUPP\\jcalendar-0.8.1.jar
 file.reference.jcommon-1.0.23.jar=D:\\RUPP\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
+file.reference.jdatepicker-1.3.4.jar=lib\\jdatepicker-1.3.4.jar
 file.reference.jfreechart-1.0.19.jar=D:\\RUPP\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
-    ${file.reference.jcalendar-0.8.1.jar}
+    ${file.reference.jcalendar-0.8.1.jar}:\
+    ${file.reference.jdatepicker-1.3.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
