--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,17 +35,21 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/RUPP
 endorsed.classpath=
 excludes=
+file.reference.itextpdf-5.5.13.jar=lib\\itextpdf-5.5.13.jar
 file.reference.jcalendar-0.8.1.jar=D:\\RUPP\\jcalendar-0.8.1.jar
 file.reference.jcommon-1.0.23.jar=D:\\RUPP\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
 file.reference.jdatepicker-1.3.4.jar=lib\\jdatepicker-1.3.4.jar
 file.reference.jfreechart-1.0.19.jar=D:\\RUPP\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
+file.reference.pdfbox-app-3.0.3.jar=lib\\pdfbox-app-3.0.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
     ${file.reference.jcalendar-0.8.1.jar}:\
-    ${file.reference.jdatepicker-1.3.4.jar}
+    ${file.reference.jdatepicker-1.3.4.jar}:\
+    ${file.reference.itextpdf-5.5.13.jar}:\
+    ${file.reference.pdfbox-app-3.0.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
