--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,28 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/RUPP
 endorsed.classpath=
 excludes=
+file.reference.commons-collections4-4.4.jar=lib\\commons-collections4-4.4.jar
+file.reference.commons-collections4-4.4.jar-1=..\\..\\poi-5.0.0\\lib\\commons-collections4-4.4.jar
+file.reference.commons-compress-1.20.jar=D:\\RUPP\\poi-5.0.0\\ooxml-lib\\commons-compress-1.20.jar
+file.reference.commons-compress-1.21.jar=lib\\commons-compress-1.21.jar
+file.reference.commons-math3-3.6.1.jar=..\\..\\poi-5.0.0\\lib\\commons-math3-3.6.1.jar
 file.reference.itextpdf-5.5.13.jar=lib\\itextpdf-5.5.13.jar
 file.reference.jcalendar-0.8.1.jar=D:\\RUPP\\jcalendar-0.8.1.jar
 file.reference.jcommon-1.0.23.jar=D:\\RUPP\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
 file.reference.jdatepicker-1.3.4.jar=lib\\jdatepicker-1.3.4.jar
 file.reference.jfreechart-1.0.19.jar=D:\\RUPP\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
+file.reference.log4j-api-2.18.0.jar=lib\\log4j-api-2.18.0.jar
+file.reference.ooxml-schemas-1.0.jar=lib\\ooxml-schemas-1.0.jar
 file.reference.pdfbox-app-3.0.3.jar=lib\\pdfbox-app-3.0.3.jar
+file.reference.poi-5.0.0.jar=..\\..\\poi-5.0.0\\poi-5.0.0.jar
+file.reference.poi-5.2.3.jar=lib\\poi-5.2.3.jar
+file.reference.poi-ooxml-5.0.0.jar=..\\..\\poi-5.0.0\\poi-ooxml-5.0.0.jar
+file.reference.poi-ooxml-5.2.3.jar=lib\\poi-ooxml-5.2.3.jar
+file.reference.poi-ooxml-full-5.0.0.jar=D:\\RUPP\\poi-5.0.0\\poi-ooxml-full-5.0.0.jar
+file.reference.poi-ooxml-schemas-4.1.2.jar=lib\\poi-ooxml-schemas-4.1.2.jar
+file.reference.stax-api-1.0.1.jar=lib\\stax-api-1.0.1.jar
+file.reference.xmlbeans-4.0.0.jar=..\\..\\poi-5.0.0\\ooxml-lib\\xmlbeans-4.0.0.jar
+file.reference.xmlbeans-5.1.1.jar=lib\\xmlbeans-5.1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -49,7 +65,23 @@ javac.classpath=\
     ${file.reference.jcalendar-0.8.1.jar}:\
     ${file.reference.jdatepicker-1.3.4.jar}:\
     ${file.reference.itextpdf-5.5.13.jar}:\
-    ${file.reference.pdfbox-app-3.0.3.jar}
+    ${file.reference.pdfbox-app-3.0.3.jar}:\
+    ${file.reference.ooxml-schemas-1.0.jar}:\
+    ${file.reference.poi-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.1.2.jar}:\
+    ${file.reference.stax-api-1.0.1.jar}:\
+    ${file.reference.xmlbeans-5.1.1.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-compress-1.21.jar}:\
+    ${file.reference.log4j-api-2.18.0.jar}:\
+    ${file.reference.poi-5.0.0.jar}:\
+    ${file.reference.poi-ooxml-5.0.0.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}:\
+    ${file.reference.commons-collections4-4.4.jar-1}:\
+    ${file.reference.commons-compress-1.20.jar}:\
+    ${file.reference.xmlbeans-4.0.0.jar}:\
+    ${file.reference.poi-ooxml-full-5.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
