--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,6 +40,7 @@ file.reference.commons-collections4-4.4.jar-1=..\\..\\poi-5.0.0\\lib\\commons-co
 file.reference.commons-compress-1.20.jar=D:\\RUPP\\poi-5.0.0\\ooxml-lib\\commons-compress-1.20.jar
 file.reference.commons-compress-1.21.jar=lib\\commons-compress-1.21.jar
 file.reference.commons-math3-3.6.1.jar=..\\..\\poi-5.0.0\\lib\\commons-math3-3.6.1.jar
+file.reference.itextpdf-5.5.13.4.jar=..\\..\\IText\\itextpdf-5.5.13.4.jar
 file.reference.itextpdf-5.5.13.jar=lib\\itextpdf-5.5.13.jar
 file.reference.jcalendar-0.8.1.jar=D:\\RUPP\\jcalendar-0.8.1.jar
 file.reference.jcommon-1.0.23.jar=D:\\RUPP\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
@@ -81,7 +82,8 @@ javac.classpath=\
     ${file.reference.commons-collections4-4.4.jar-1}:\
     ${file.reference.commons-compress-1.20.jar}:\
     ${file.reference.xmlbeans-4.0.0.jar}:\
-    ${file.reference.poi-ooxml-full-5.0.0.jar}
+    ${file.reference.poi-ooxml-full-5.0.0.jar}:\
+    ${file.reference.itextpdf-5.5.13.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
